fix for "_id", small refactorings